@@ -799,6 +799,11 @@ initpycurl(void)
 #if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 24, 0)
     insint_c(d, "ACCEPTTIMEOUT_MS", CURLOPT_ACCEPTTIMEOUT_MS);
 #endif
+#if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 25, 0)
+    insint_c(d, "TCP_KEEPALIVE", CURLOPT_TCP_KEEPALIVE);
+    insint_c(d, "TCP_KEEPIDLE", CURLOPT_TCP_KEEPIDLE);
+    insint_c(d, "TCP_KEEPINTVL", CURLOPT_TCP_KEEPINTVL);
+#endif
     insint_c(d, "HTTP_TRANSFER_DECODING", CURLOPT_HTTP_TRANSFER_DECODING);
     insint_c(d, "HTTP_CONTENT_DECODING", CURLOPT_HTTP_CONTENT_DECODING);
     insint_c(d, "NEW_FILE_PERMS", CURLOPT_NEW_FILE_PERMS);
